Am facut mai curat navbar-ul, am reparat buguri cu scrollbar-ul si am adaugat un sidebar

--- a/Orkiee/CSS/main.less
+++ b/Orkiee/CSS/main.less
@@ -1,32 +1,36 @@
 ﻿body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color:#f2f2f2;
+    background-color:white;
+    overflow:hidden;
     .inline{
         display:inline-block;
     }
-    .right{
+    .rightside{
         float:right;
     }
-    .left{
+    .leftside{
         float:left;
     }
     .navigation{
+        margin:0px;
         background-color:black;
-        height:120px;
         .logo{
-            margin-left:40px;
-            padding:20px;
+            margin-top:30px;
+            padding:0px;
             img{
+                margin-left:30px;
                 height:66px;
                 width:128px;
             }
         }
         .home{
-            margin-left:-50px;
+            margin-top:30px;
+            padding:0px;
             color:white;
             font-size:40px;
-            padding:32px;
-            margin-right:100px;
+            span{
+                margin:0px 0px 0px 40px;
+            }
         }
         .tab{
             padding:7px 0px 7px 0px;
@@ -40,12 +44,20 @@
         }
         .profile{
             img{
+                float:right;
                 height:50px;
                 width:50px;
                 border-radius:100%;
                 border:1px solid white;
+                margin-right:40px;
             }
-            margin:30px -50px 30px 100px;
+            padding:0px;
+            margin-top:30px;
         }
+    }
+    .sidebar{
+        background-color:rgba(232, 230, 230, 1);
+        height:100vh;
+
     }
 }
